# mdict-query

./: .gitignore  README.md  mdict_query.py  pyproject.toml  test_mdict_query.py
.github/workflows/: python-publish.yml
mdict-query/: __init__.py
mdict_query/: mdict_dir.py  mdict_query.py  readmdict.py
src/mdict_query/: index_builder.py  mdict_utils.py  readmdict.py  readmdictv3.py
src/mdx_query/: mdict_dir.py  mdict_query.py  mdict_utils.py  readmdict.py  readmdictv3.py
