[project]
name = "mdict-query"
version = "0.2.3"
description = "Add your description here"
authors = [
    { name = "fanyingfx", email = "fanyingfx@outlook.com" }
]
dependencies = [
    "beautifulsoup4>=4.12.3",
    "pip>=24.0",
    "install>=1.3.5",
    "xxhash>=3.4.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/mdict_query"]
